fixed alignment in questions page finally

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -185,16 +185,13 @@ padding: 20px;
 
 #questions{
 width: 100px;
-height: 200px;
-margin-left: -30px;
-padding: 20px;
-margin-top: -30px;
+margin-left: -10px;
+margin-top: -10px;
 }
 
 #questionform {
-padding-right: 280px;
-float: right;
-margin-top: -230px;
+margin-left: 180px;
+margin-top: -180px;
 }
 
 
